--- a/kafka.yml
+++ b/kafka.yml
@@ -13,7 +13,9 @@ services:
     volumes:
       - ./zk-single-kafka-multiple/zoo1/data:/data
       - ./zk-single-kafka-multiple/zoo1/datalog:/datalog
-
+    networks:
+      - global  
+      
   kafka1:
     image: confluentinc/cp-kafka:5.2.1
     hostname: kafka1
@@ -30,7 +32,9 @@ services:
       - ./zk-single-kafka-multiple/kafka1/data:/var/lib/kafka/data
     depends_on:
       - zoo1
-
+    networks:
+      - global  
+      
   kafka2:
     image: confluentinc/cp-kafka:5.2.1
     hostname: kafka2
@@ -47,7 +51,9 @@ services:
       - ./zk-single-kafka-multiple/kafka2/data:/var/lib/kafka/data
     depends_on:
       - zoo1
-
+      - kafka1
+    networks:
+      - global  
 
   kafka3:
     image: confluentinc/cp-kafka:5.2.1
@@ -65,3 +71,9 @@ services:
       - ./zk-single-kafka-multiple/kafka3/data:/var/lib/kafka/data
     depends_on:
       - zoo1
+      - kafka1
+      - kafka2
+    networks:
+      - global        
+networks:
+  global:       
